# video-analyzer-pro

./: .env.example  .gitignore  Makefile  README.md  main.py  md_to_docx.py  pyproject.toml  requirements.txt  setup.py  setup_pro.sh
docs/: API_KEY_TROUBLESHOOTING.md  CHANGELOG.md  CONFIG_GUIDE.md  FINAL_SUMMARY.md  FINAL_SUMMARY_V6.md  GET_QWEN_API_KEY.txt  LATEST_UPDATES.md  OCR_CHINESE_FIX.md  OCR_FIX_V6.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  PDF_TEXT_FIX.md  PROJECT_STRUCTURE.md  PRO_VERSION_GUIDE.md  QUICKSTART_QWEN_ASR.md  QUICKSTART_V5.md  QUICK_FIX_OCR.md  QUICK_START.md  QUICK_START_PRO.md  QWEN_ASR_USAGE.md  QWEN_ASR_集成说明.md  QWEN_OCR_GUIDE.md  README.md  README_PRO.md  README_VIDEO_ANALYZER_PRO.md  SUMMARY.md  TEXT_INTEGRATION_GUIDE.md  TEXT_LAYOUT_V3.md  TRADITIONAL_TO_SIMPLIFIED.md  V5_UPDATE_SUMMARY.md  V7_IMPROVEMENTS.md  V7改进说明.md  VERIFICATION_REPORT_V6.md  VIDEO_ANALYZER_PRO_USAGE.md  VOICE_FILTER_GUIDE.md  VOICE_FILTER_SUMMARY.md  WORD_EXPORT_GUIDE.md  fix_ocr_chinese.sh
examples/: api_usage.py  basic_usage.py
results/: 1732328440969754_ocr_qwen.txt  1732868763331982_frames_pro.docx  1737685380697777_frames_pro.docx
src/video_analyzer/: __init__.py
src/video_analyzer/asr/: __init__.py  kimi_asr.py  qwen_asr.py
src/video_analyzer/core/: __init__.py  analyzer.py
src/video_analyzer/llm/: __init__.py  refine_agent.py
src/video_analyzer/ocr/: __init__.py  kimi_ocr.py  qwen_ocr.py
src/video_analyzer/utils/: __init__.py  config.py  file_utils.py
tests/: analyze_gap.py  analyze_page_similarity.py  check_781_871.py  check_integer_seconds.py  check_pages_21_23.py  check_results.py  debug_missing_14.py  diagnose_missing_frames.py  final_check_21_23.py  final_verification.py  similarity_analysis.txt  similarity_test_results.txt  test_batch_mode.py  test_duplicate_frames.py  test_env_config.py  test_jpeg_diff.py  test_llm_optimized.py  test_llm_speed.py  test_ocr_fix.py  test_ocr_in_llm.py  test_ocr_load.py  test_real_batch.py  test_similarity.py  test_v7_improvements.py  test_video_analyzer_batch.py  test_voice_filter.sh  verify_all_frames.py  verify_fix.py  verify_word_structure.py
